@@ -1,3 +1,6 @@
+modified trusted SSL certs code so that we remember to trust the certificate
+even if there is no local cert file backing it up.
+
 modified the smtp tls code to comply with javamail 1.3.2.
 
 upgraded to JavaMail 1.3.2.
